fix: use unique db properties to avoid render auto-injection collision

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=backend
 
 # Database Configuration 
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:fintrack}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.url=jdbc:postgresql://${FINTRACK_DB_HOST:localhost}:${FINTRACK_DB_PORT:5433}/${FINTRACK_DB_NAME:fintrack}
+spring.datasource.username=${FINTRACK_DB_USER:postgres}
+spring.datasource.password=${FINTRACK_DB_PASS:postgres}
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
