--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,5 +1,4 @@
 # Build stage
-# Build stage
 FROM maven:3.8.5-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY pom.xml .
@@ -11,4 +10,7 @@ FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Optimize for Render Free Tier (512MB RAM):
+# -Xmx352m: Limit heap to 352MB to leave room for stack and non-heap memory
+# --server.port: Bind to the PORT environment variable provided by Render
+ENTRYPOINT ["java", "-Xmx352m", "-jar", "app.jar", "--server.port=${PORT:8080}"]
